--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: gray;
+    background-color: rgb(36 40 47);
+    /* background-color: black; */
+    font-family: 'Anton', sans-serif;
 }
