--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~ngx-toastr/toastr';
+
+
 body {
-    background-color: rgb(36 40 47);
+    /* background-color: rgb(36 40 47); */
     /* background-color: black; */
     font-family: 'Anton', sans-serif;
+}
+
+.logo {
+    margin: 0 auto;
+    display: block;
+}
+
+.card {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    box-sizing: border-box;
+    margin: 10px 0;
+    background-color: #fff;
+    max-width: 500px;
+    white-space: nowrap;
+    overflow: hidden;
+    transition: all 0.2 ease-in-out;
+}
+
+.card-inner {
+    padding: 10px;
+  }
+    
+.card:hover {
+    box-shadow: 0 5px 5px rgba(243, 235, 235, 0.911), 0 6px 6px rgba(0, 0, 0, 0.24);
 }
